# MagicMirror

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  prefix.hpp
